[package]
name = "rustkit"
version = "0.0.1"

authors = ["Michael Wu <mwu.code@gmail.com>"]
description = "Fast and ergonomic Rust bindings for ObjC APIs"
repository = "https://github.com/michaelwu/RustKit"
readme = "README.md"
license = "Apache-2.0/MIT"

[build-dependencies]
rustkit_bindgen = { path = "rustkit_bindgen", version = "0.0.1" }

[dependencies]
bitflags = "1.0"
